Fix locale switcher flag spacing

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
@@ -985,6 +985,10 @@ div.dropdown-menu.channel {
       font-size: 14px;
       vertical-align: middle;
     }
+    .flag-language .language {
+      width: auto;
+      padding-right: 3px;
+    }
   }
   .dropdown-menu {
     padding: 0;
@@ -1027,6 +1031,15 @@ div.dropdown-menu.channel {
       width: 30px;
       display: inline-block;
     }
+  }
+}
+#comparison-switcher .dropdown-toggle .flag-language {
+  .flag {
+    vertical-align: middle;
+    margin-top: 2px;
+  }
+  .language {
+    padding-left: 0;
   }
 }
 
